version/0.6/_sources/examples/index.rst.txt
:orphan:

.. _ref_example_gallery:

Examples
========
End-to-end examples show how you can use PyAEDT. If PyAEDT is installed
on your machine, you can download these examples as Python files or Jupyter
notebooks and run them locally.

.. note::
    Some examples require additional Python packages.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>

EDB examples
~~~~~~~~~~~~
These examples use EDB (Electronics Database) with PyAEDT.
EDB is a powerful API that allows to control PCB data efficently.
You can either use EDB standalone or embedded in HFSS 3D Layout in AEDT.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="EDB: geometry creation">

.. only:: html

  .. image:: /examples/00-EDB/images/thumb/sphx_glr_00_EDB_Create_VIA_thumb.png
    :alt: EDB: geometry creation

  :ref:`sphx_glr_examples_00-EDB_00_EDB_Create_VIA.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EDB: geometry creation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="EDB: Siwave analysis from EDB setup">

.. only:: html

  .. image:: /examples/00-EDB/images/thumb/sphx_glr_01_edb_example_thumb.png
    :alt: EDB: Siwave analysis from EDB setup

  :ref:`sphx_glr_examples_00-EDB_01_edb_example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EDB: Siwave analysis from EDB setup</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="EDB: IPC2581 export">

.. only:: html

  .. image:: /examples/00-EDB/images/thumb/sphx_glr_02_edb_to_ipc2581_thumb.png
    :alt: EDB: IPC2581 export

  :ref:`sphx_glr_examples_00-EDB_02_edb_to_ipc2581.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EDB: IPC2581 export</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="EDB: 5G linear array antenna">

.. only:: html

  .. image:: /examples/00-EDB/images/thumb/sphx_glr_03_5G_antenna_example_thumb.png
    :alt: EDB: 5G linear array antenna

  :ref:`sphx_glr_examples_00-EDB_03_5G_antenna_example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EDB: 5G linear array antenna</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="EDB: fully parametrized design">

.. only:: html

  .. image:: /examples/00-EDB/images/thumb/sphx_glr_04_edb_parametrized_design_thumb.png
    :alt: EDB: fully parametrized design

  :ref:`sphx_glr_examples_00-EDB_04_edb_parametrized_design.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EDB: fully parametrized design</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="EDB: plot nets with Matplotlib">

.. only:: html

  .. image:: /examples/00-EDB/images/thumb/sphx_glr_05_Plot_nets_thumb.png
    :alt: EDB: plot nets with Matplotlib

  :ref:`sphx_glr_examples_00-EDB_05_Plot_nets.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EDB: plot nets with Matplotlib</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="EDB: parametric via creation">

.. only:: html

  .. image:: /examples/00-EDB/images/thumb/sphx_glr_06_Advanced_EDB_thumb.png
    :alt: EDB: parametric via creation

  :ref:`sphx_glr_examples_00-EDB_06_Advanced_EDB.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EDB: parametric via creation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how you can use the PyAEDT toolkit to create the WPF (Windows Presentation F...">

.. only:: html

  .. image:: /examples/00-EDB/images/thumb/sphx_glr_07_WPF_Merge_Utility_thumb.png
    :alt: EDB: merge utility

  :ref:`sphx_glr_examples_00-EDB_07_WPF_Merge_Utility.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EDB: merge utility</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="EDB: fully parametrized CPWG design">

.. only:: html

  .. image:: /examples/00-EDB/images/thumb/sphx_glr_08_CPWG_thumb.png
    :alt: EDB: fully parametrized CPWG design

  :ref:`sphx_glr_examples_00-EDB_08_CPWG.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EDB: fully parametrized CPWG design</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="EDB: fully configurable project">

.. only:: html

  .. image:: /examples/00-EDB/images/thumb/sphx_glr_09_Configuration_thumb.png
    :alt: EDB: fully configurable project

  :ref:`sphx_glr_examples_00-EDB_09_Configuration.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EDB: fully configurable project</div>
    </div>


.. raw:: html

    </div>

HFSS 3D Layout examples
~~~~~~~~~~~~~~~~~~~~~~~
These examples use PyAEDT to show some end-to-end workflows for HFSS 3D Layout.
It includes model generation, setup, meshing, and post-processing.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="HFSS 3D Layout: SIwave DCIR analysis in HFSS 3D Layout">

.. only:: html

  .. image:: /examples/01-HFSS3DLayout/images/thumb/sphx_glr_Dcir_in_3DLayout_thumb.png
    :alt: HFSS 3D Layout: SIwave DCIR analysis in HFSS 3D Layout

  :ref:`sphx_glr_examples_01-HFSS3DLayout_Dcir_in_3DLayout.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HFSS 3D Layout: SIwave DCIR analysis in HFSS 3D Layout</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="HFSS 3D Layout: PCB and EDB in 3D layout">

.. only:: html

  .. image:: /examples/01-HFSS3DLayout/images/thumb/sphx_glr_EDB_in_3DLayout_thumb.png
    :alt: HFSS 3D Layout: PCB and EDB in 3D layout

  :ref:`sphx_glr_examples_01-HFSS3DLayout_EDB_in_3DLayout.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HFSS 3D Layout: PCB and EDB in 3D layout</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="HFSS 3D Layout: parametric via analysis">

.. only:: html

  .. image:: /examples/01-HFSS3DLayout/images/thumb/sphx_glr_HFSS3DLayout_Via_thumb.png
    :alt: HFSS 3D Layout: parametric via analysis

  :ref:`sphx_glr_examples_01-HFSS3DLayout_HFSS3DLayout_Via.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HFSS 3D Layout: parametric via analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="HFSS: 3D Components">

.. only:: html

  .. image:: /examples/01-HFSS3DLayout/images/thumb/sphx_glr_Hfss3DComponent_thumb.png
    :alt: HFSS: 3D Components

  :ref:`sphx_glr_examples_01-HFSS3DLayout_Hfss3DComponent.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HFSS: 3D Components</div>
    </div>


.. raw:: html

    </div>

General model and setup examples
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
These examples use PyAEDT to show some general model and simulation
setup features inside AEDT.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="* HFSS * 2D Extractor and Q3D Extractor * Maxwell * Icepak (in AEDT) * Mechanical (in AEDT)">

.. only:: html

  .. image:: /examples/01-Modeling-Setup/images/thumb/sphx_glr_Configurations_thumb.png
    :alt: General: configuration files

  :ref:`sphx_glr_examples_01-Modeling-Setup_Configurations.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">General: configuration files</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="General: coordinate system creation">

.. only:: html

  .. image:: /examples/01-Modeling-Setup/images/thumb/sphx_glr_HFSS_CoordinateSystem_thumb.png
    :alt: General: coordinate system creation

  :ref:`sphx_glr_examples_01-Modeling-Setup_HFSS_CoordinateSystem.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">General: coordinate system creation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="General: optimetrics setup">

.. only:: html

  .. image:: /examples/01-Modeling-Setup/images/thumb/sphx_glr_Optimetrics_thumb.png
    :alt: General: optimetrics setup

  :ref:`sphx_glr_examples_01-Modeling-Setup_Optimetrics.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">General: optimetrics setup</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="General: polyline creation">

.. only:: html

  .. image:: /examples/01-Modeling-Setup/images/thumb/sphx_glr_Polyline_Primitives_thumb.png
    :alt: General: polyline creation

  :ref:`sphx_glr_examples_01-Modeling-Setup_Polyline_Primitives.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">General: polyline creation</div>
    </div>


.. raw:: html

    </div>

HFSS examples
~~~~~~~~~~~~~
These examples use PyAEDT to show some end-to-end workflows for HFSS 3D.
This includes model generation, setup, meshing, and postprocessing.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="HFSS: Cable Modeling">

.. only:: html

  .. image:: /examples/02-HFSS/images/thumb/sphx_glr_01-Cable_Modeling_Workflow_thumb.png
    :alt: HFSS: Cable Modeling

  :ref:`sphx_glr_examples_02-HFSS_01-Cable_Modeling_Workflow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HFSS: Cable Modeling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="HFSS: advanced far field postprocessing">

.. only:: html

  .. image:: /examples/02-HFSS/images/thumb/sphx_glr_Advanced_Far_Field_thumb.png
    :alt: HFSS: advanced far field postprocessing

  :ref:`sphx_glr_examples_02-HFSS_Advanced_Far_Field.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HFSS: advanced far field postprocessing</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="HFSS: component antenna array">

.. only:: html

  .. image:: /examples/02-HFSS/images/thumb/sphx_glr_Array_thumb.png
    :alt: HFSS: component antenna array

  :ref:`sphx_glr_examples_02-HFSS_Array.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HFSS: component antenna array</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="HFSS: flex cable CPWG">

.. only:: html

  .. image:: /examples/02-HFSS/images/thumb/sphx_glr_Flex_CPWG_thumb.png
    :alt: HFSS: flex cable CPWG

  :ref:`sphx_glr_examples_02-HFSS_Flex_CPWG.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HFSS: flex cable CPWG</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="HFSS: choke">

.. only:: html

  .. image:: /examples/02-HFSS/images/thumb/sphx_glr_HFSS_Choke_thumb.png
    :alt: HFSS: choke

  :ref:`sphx_glr_examples_02-HFSS_HFSS_Choke.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HFSS: choke</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="HFSS: dipole antenna">

.. only:: html

  .. image:: /examples/02-HFSS/images/thumb/sphx_glr_HFSS_Dipole_thumb.png
    :alt: HFSS: dipole antenna

  :ref:`sphx_glr_examples_02-HFSS_HFSS_Dipole.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HFSS: dipole antenna</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="HFSS: spiral inductor">

.. only:: html

  .. image:: /examples/02-HFSS/images/thumb/sphx_glr_HFSS_Spiral_thumb.png
    :alt: HFSS: spiral inductor

  :ref:`sphx_glr_examples_02-HFSS_HFSS_Spiral.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HFSS: spiral inductor</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="#. Generate the database. #. Create the machine learning algorithm. #. Implement the model in a...">

.. only:: html

  .. image:: /examples/02-HFSS/images/thumb/sphx_glr_Machine_learning_applied_to_Patch_thumb.png
    :alt: HFSS: machine learning applied to a patch

  :ref:`sphx_glr_examples_02-HFSS_Machine_learning_applied_to_Patch.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HFSS: machine learning applied to a patch</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="HFSS: Inductive Iris waveguide filter">

.. only:: html

  .. image:: /examples/02-HFSS/images/thumb/sphx_glr_Waveguide_Filter_thumb.png
    :alt: HFSS: Inductive Iris waveguide filter

  :ref:`sphx_glr_examples_02-HFSS_Waveguide_Filter.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HFSS: Inductive Iris waveguide filter</div>
    </div>


.. raw:: html

    </div>

SBR+ examples
~~~~~~~~~~~~~
These examples use PyAEDT to show some end-to-end workflows for HFSS SBR+.
This includes model generation, setup, meshing, and postprocessing.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="SBR+: Import Geometry from Maps">

.. only:: html

  .. image:: /examples/02-SBR+/images/thumb/sphx_glr_SBR_City_Import_thumb.png
    :alt: SBR+: Import Geometry from Maps

  :ref:`sphx_glr_examples_02-SBR+_SBR_City_Import.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">SBR+: Import Geometry from Maps</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="SBR+: doppler setup">

.. only:: html

  .. image:: /examples/02-SBR+/images/thumb/sphx_glr_SBR_Doppler_Example_thumb.png
    :alt: SBR+: doppler setup

  :ref:`sphx_glr_examples_02-SBR+_SBR_Doppler_Example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">SBR+: doppler setup</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="SBR+: HFSS to SBR+ coupling">

.. only:: html

  .. image:: /examples/02-SBR+/images/thumb/sphx_glr_SBR_Example_thumb.png
    :alt: SBR+: HFSS to SBR+ coupling

  :ref:`sphx_glr_examples_02-SBR+_SBR_Example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">SBR+: HFSS to SBR+ coupling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="SBR+: HFSS to SBR+ time animation">

.. only:: html

  .. image:: /examples/02-SBR+/images/thumb/sphx_glr_SBR_Time_Plot_thumb.png
    :alt: SBR+: HFSS to SBR+ time animation

  :ref:`sphx_glr_examples_02-SBR+_SBR_Time_Plot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">SBR+: HFSS to SBR+ time animation</div>
    </div>


.. raw:: html

    </div>

Maxwell examples
~~~~~~~~~~~~~~~~
These examples use PyAEDT to show some end-to-end workflows for Maxwell 2D and
Maxwell 3D. This includes model generation, setup, meshing, and postprocessing.
Examples cover different Maxwell solution types (Eddy Current, Magnetostatic,
and Transient).



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Maxwell 2D Electrostatic analysis">

.. only:: html

  .. image:: /examples/03-Maxwell/images/thumb/sphx_glr_Maxwell2D_Electrostatic_thumb.png
    :alt: Maxwell 2D Electrostatic analysis

  :ref:`sphx_glr_examples_03-Maxwell_Maxwell2D_Electrostatic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Maxwell 2D Electrostatic analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Maxwell 2D: PM synchronous motor transient analysis">

.. only:: html

  .. image:: /examples/03-Maxwell/images/thumb/sphx_glr_Maxwell2D_NissanLeaf_thumb.png
    :alt: Maxwell 2D: PM synchronous motor transient analysis

  :ref:`sphx_glr_examples_03-Maxwell_Maxwell2D_NissanLeaf.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Maxwell 2D: PM synchronous motor transient analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The following libraries are required for the advanced postprocessing features used in this exam...">

.. only:: html

  .. image:: /examples/03-Maxwell/images/thumb/sphx_glr_Maxwell2D_Transient_thumb.png
    :alt: Maxwell 2D: transient winding analysis

  :ref:`sphx_glr_examples_03-Maxwell_Maxwell2D_Transient.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Maxwell 2D: transient winding analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Maxwell 3D: bath plate analysis">

.. only:: html

  .. image:: /examples/03-Maxwell/images/thumb/sphx_glr_Maxwell3DTeam3_thumb.png
    :alt: Maxwell 3D: bath plate analysis

  :ref:`sphx_glr_examples_03-Maxwell_Maxwell3DTeam3.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Maxwell 3D: bath plate analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Maxwell 3D: asymmetric conductor analysis">

.. only:: html

  .. image:: /examples/03-Maxwell/images/thumb/sphx_glr_Maxwell3DTeam7_thumb.png
    :alt: Maxwell 3D: asymmetric conductor analysis

  :ref:`sphx_glr_examples_03-Maxwell_Maxwell3DTeam7.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Maxwell 3D: asymmetric conductor analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Maxwell 3D: choke setup">

.. only:: html

  .. image:: /examples/03-Maxwell/images/thumb/sphx_glr_Maxwell3D_Choke_thumb.png
    :alt: Maxwell 3D: choke setup

  :ref:`sphx_glr_examples_03-Maxwell_Maxwell3D_Choke.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Maxwell 3D: choke setup</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Maxwell 3D: magnet DC analysis">

.. only:: html

  .. image:: /examples/03-Maxwell/images/thumb/sphx_glr_Maxwell_Magnet_thumb.png
    :alt: Maxwell 3D: magnet DC analysis

  :ref:`sphx_glr_examples_03-Maxwell_Maxwell_Magnet.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Maxwell 3D: magnet DC analysis</div>
    </div>


.. raw:: html

    </div>

Icepak examples
~~~~~~~~~~~~~~~
These examples use PyAEDT to show end-to-end workflows for Icepak. This includes
schematic generation, setup, and thermal postprocessing.




.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Icepak: thermal analysis with 3D components">

.. only:: html

  .. image:: /examples/04-Icepak/images/thumb/sphx_glr_Icepak_3DComponents_Example_thumb.png
    :alt: Icepak: thermal analysis with 3D components

  :ref:`sphx_glr_examples_04-Icepak_Icepak_3DComponents_Example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Icepak: thermal analysis with 3D components</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Icepak: graphic card thermal analysis">

.. only:: html

  .. image:: /examples/04-Icepak/images/thumb/sphx_glr_Icepak_Example_thumb.png
    :alt: Icepak: graphic card thermal analysis

  :ref:`sphx_glr_examples_04-Icepak_Icepak_Example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Icepak: graphic card thermal analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Icepak: setup from Sherlock inputs">

.. only:: html

  .. image:: /examples/04-Icepak/images/thumb/sphx_glr_Sherlock_Example_thumb.png
    :alt: Icepak: setup from Sherlock inputs

  :ref:`sphx_glr_examples_04-Icepak_Sherlock_Example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Icepak: setup from Sherlock inputs</div>
    </div>


.. raw:: html

    </div>

2D Extractor and Q3D Extractor examples
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
These examples use PyAEDT to show some end-to-end workflows for 2D Extractor and
Q3D Extractor. This includes model generation, setup, and thermal postprocessing.




.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="2D Extractor: CPWG analysis">

.. only:: html

  .. image:: /examples/05-Q3D/images/thumb/sphx_glr_Q2D_Example_CPWG_thumb.png
    :alt: 2D Extractor: CPWG analysis

  :ref:`sphx_glr_examples_05-Q3D_Q2D_Example_CPWG.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">2D Extractor: CPWG analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="2D Extractor: stripline analysis">

.. only:: html

  .. image:: /examples/05-Q3D/images/thumb/sphx_glr_Q2D_Example_Stripline_thumb.png
    :alt: 2D Extractor: stripline analysis

  :ref:`sphx_glr_examples_05-Q3D_Q2D_Example_Stripline.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">2D Extractor: stripline analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Q3D Extractor: busbar analysis">

.. only:: html

  .. image:: /examples/05-Q3D/images/thumb/sphx_glr_Q3D_Example_thumb.png
    :alt: Q3D Extractor: busbar analysis

  :ref:`sphx_glr_examples_05-Q3D_Q3D_Example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Q3D Extractor: busbar analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Q3D Extractor: PCB analysis">

.. only:: html

  .. image:: /examples/05-Q3D/images/thumb/sphx_glr_Q3D_from_EDB_thumb.png
    :alt: Q3D Extractor: PCB analysis

  :ref:`sphx_glr_examples_05-Q3D_Q3D_from_EDB.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Q3D Extractor: PCB analysis</div>
    </div>


.. raw:: html

    </div>

Multiphysics examples
~~~~~~~~~~~~~~~~~~~~~
These examples use PyAEDT to create some multiphysics workflows. They might use
an electromagnetic tool like HFSS or Maxwell and a thermal or structural tool
like Icepak or Mechanical.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="To provide the advanced postprocessing features needed for this example, the numpy, matplotlib,...">

.. only:: html

  .. image:: /examples/06-Multiphysics/images/thumb/sphx_glr_Hfss_Icepak_Coupling_thumb.png
    :alt: Multiphysics: HFSS-Icepak multiphysics analysis

  :ref:`sphx_glr_examples_06-Multiphysics_Hfss_Icepak_Coupling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multiphysics: HFSS-Icepak multiphysics analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Multiphysics: HFSS-Mechanical multiphysics analysis">

.. only:: html

  .. image:: /examples/06-Multiphysics/images/thumb/sphx_glr_Hfss_Mechanical_thumb.png
    :alt: Multiphysics: HFSS-Mechanical multiphysics analysis

  :ref:`sphx_glr_examples_06-Multiphysics_Hfss_Mechanical.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multiphysics: HFSS-Mechanical multiphysics analysis</div>
    </div>


.. raw:: html

    </div>

Circuit examples
~~~~~~~~~~~~~~~~
These examples use PyAEDT to show some end-to-end workflows for Circuit.
This includes schematic generation, setup, and postprocessing.




.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Circuit: AMI PostProcessing">

.. only:: html

  .. image:: /examples/07-Circuit/images/thumb/sphx_glr_Circuit_AMI_thumb.png
    :alt: Circuit: AMI PostProcessing

  :ref:`sphx_glr_examples_07-Circuit_Circuit_AMI.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Circuit: AMI PostProcessing</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Circuit: schematic creation and analysis">

.. only:: html

  .. image:: /examples/07-Circuit/images/thumb/sphx_glr_Circuit_Example_thumb.png
    :alt: Circuit: schematic creation and analysis

  :ref:`sphx_glr_examples_07-Circuit_Circuit_Example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Circuit: schematic creation and analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Circuit: schematic subcircuit management">

.. only:: html

  .. image:: /examples/07-Circuit/images/thumb/sphx_glr_Circuit_Subcircuit_Example_thumb.png
    :alt: Circuit: schematic subcircuit management

  :ref:`sphx_glr_examples_07-Circuit_Circuit_Subcircuit_Example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Circuit: schematic subcircuit management</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Circuit: transient analysis and eye plot">

.. only:: html

  .. image:: /examples/07-Circuit/images/thumb/sphx_glr_Circuit_Transient_thumb.png
    :alt: Circuit: transient analysis and eye plot

  :ref:`sphx_glr_examples_07-Circuit_Circuit_Transient.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Circuit: transient analysis and eye plot</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Circuit: netlist to schematic import">

.. only:: html

  .. image:: /examples/07-Circuit/images/thumb/sphx_glr_Create_Netlist_thumb.png
    :alt: Circuit: netlist to schematic import

  :ref:`sphx_glr_examples_07-Circuit_Create_Netlist.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Circuit: netlist to schematic import</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Circuit: automatic report creation">

.. only:: html

  .. image:: /examples/07-Circuit/images/thumb/sphx_glr_Reports_thumb.png
    :alt: Circuit: automatic report creation

  :ref:`sphx_glr_examples_07-Circuit_Reports.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Circuit: automatic report creation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="To provide the advanced postprocessing features needed for this example, Matplotlib and NumPy m...">

.. only:: html

  .. image:: /examples/07-Circuit/images/thumb/sphx_glr_Touchstone_Management_thumb.png
    :alt: Circuit: Touchstone file management

  :ref:`sphx_glr_examples_07-Circuit_Touchstone_Management.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Circuit: Touchstone file management</div>
    </div>


.. raw:: html

    </div>

EMIT examples
~~~~~~~~~~~~~
These examples use PyAEDT to show some end-to-end workflows for EMIT.
This includes schematic generation, setup, and postprocessing.




.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="EMIT: antenna">

.. only:: html

  .. image:: /examples/07-EMIT/images/thumb/sphx_glr_EMIT_Example_thumb.png
    :alt: EMIT: antenna

  :ref:`sphx_glr_examples_07-EMIT_EMIT_Example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EMIT: antenna</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="EMIT: HFSS to EMIT coupling">

.. only:: html

  .. image:: /examples/07-EMIT/images/thumb/sphx_glr_EMIT_HFSS_Example_thumb.png
    :alt: EMIT: HFSS to EMIT coupling

  :ref:`sphx_glr_examples_07-EMIT_EMIT_HFSS_Example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EMIT: HFSS to EMIT coupling</div>
    </div>


.. raw:: html

    </div>

Twin Builder examples
~~~~~~~~~~~~~~~~~~~~~
These examples use PyAEDT to show some end-to-end workflows for Twin Builder.
This includes schematic generation, setup, and postprocessing.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Twin Builder: RC circuit design anaysis">

.. only:: html

  .. image:: /examples/07-TwinBuilder/images/thumb/sphx_glr_01-RC_Circuit_Example_thumb.png
    :alt: Twin Builder: RC circuit design anaysis

  :ref:`sphx_glr_examples_07-TwinBuilder_01-RC_Circuit_Example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Twin Builder: RC circuit design anaysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Twin Builder: wiring a rectifier with a capacitor filter">

.. only:: html

  .. image:: /examples/07-TwinBuilder/images/thumb/sphx_glr_02-Wiring_A_Rectifier_thumb.png
    :alt: Twin Builder: wiring a rectifier with a capacitor filter

  :ref:`sphx_glr_examples_07-TwinBuilder_02-Wiring_A_Rectifier.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Twin Builder: wiring a rectifier with a capacitor filter</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Twin Builder: dynamic ROM creation and simulation (2023 R1 beta)">

.. only:: html

  .. image:: /examples/07-TwinBuilder/images/thumb/sphx_glr_03-Dynamic_ROM_Creation_And_Visualization_thumb.png
    :alt: Twin Builder: dynamic ROM creation and simulation (2023 R1 beta)

  :ref:`sphx_glr_examples_07-TwinBuilder_03-Dynamic_ROM_Creation_And_Visualization.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Twin Builder: dynamic ROM creation and simulation (2023 R1 beta)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Twin Builder: static ROM creation and simulation (2023 R1 beta)">

.. only:: html

  .. image:: /examples/07-TwinBuilder/images/thumb/sphx_glr_04-Static_ROM_Creation_And_Visualization_thumb.png
    :alt: Twin Builder: static ROM creation and simulation (2023 R1 beta)

  :ref:`sphx_glr_examples_07-TwinBuilder_04-Static_ROM_Creation_And_Visualization.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Twin Builder: static ROM creation and simulation (2023 R1 beta)</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:

   /examples/00-EDB/index.rst
   /examples/01-HFSS3DLayout/index.rst
   /examples/01-Modeling-Setup/index.rst
   /examples/02-HFSS/index.rst
   /examples/02-SBR+/index.rst
   /examples/03-Maxwell/index.rst
   /examples/04-Icepak/index.rst
   /examples/05-Q3D/index.rst
   /examples/06-Multiphysics/index.rst
   /examples/07-Circuit/index.rst
   /examples/07-EMIT/index.rst
   /examples/07-TwinBuilder/index.rst



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
